убрала лишние шрифты добавила ссылки-якоря (внутри страницы)

--- a/resume.html
+++ b/resume.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/styleres.css">
     <link href="https://fonts.googleapis.com/css?family=Yeseva+One" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Pattaya" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">  
     <title>Резюме</title>
 </head>
@@ -24,8 +22,13 @@
             </nav> 
         </header>
         <div id="content">
+                <p class="anchor">
+                    <a href="#Резюме">Резюме</a>
+                    <a href="#Resume">Resume</a>
+                    <a href="?url=cont">Навыки</a>
+                </p>
                 <table>
-                    <caption class="text">Резюме</caption>
+                    <caption class="text">Резюме <a id="Резюме"></a></caption>
                     <tr>
                         <th>Личные данные</th>
                         <td>
@@ -42,7 +45,7 @@
                         <th>Цель</th>
                         <td>
                             <ul class="list-none">
-                                <li>HTML-Верстальщик</li>
+                                <li>Получить должность - HTML-Верстальщик</li>
                             </ul>
                         </td>
                     </tr>
@@ -89,13 +92,13 @@
                 </table>
                 
                 <table>
-                    <caption>Resume</caption>
+                    <caption>Resume <a id="Resume"></a></caption>
                     <tr>
                         <th>Personal information</th>
                         <td>
                             <ul class="list-none">
                                 <li>Ryduyk Alena</li>
-                                <li>Date of birth: August 20, 1991.</li>
+                                <li>Date of birth: 20th August, 1991.</li>
                                 <li>Mobile phone: +7(968)409-80-41</li>
                                 <li>Viber: +7(977)314-96-37</li>
                                 <li>Email: alenar91@mail.ru</li>
@@ -106,7 +109,7 @@
                         <th>Objective</th>
                         <td>
                             <ul class="list-none">
-                                <li>HTML-designer</li>
+                                <li>To receive the HTML-designer's position</li>
                             </ul>
                         </td>
                     </tr>
@@ -127,7 +130,7 @@
                         <th>Work Experience</th>
                         <td>
                             <ul>
-                                <li><strong>2014 - to present</strong><br>Филиал ФКП "Российская государственная цирковая компания" "Московский художественно-производственный комбинат"<br>Инженер по техническим паспортам<br>Изготовление технических паспортов на цирковые аппараты, изделия, цирковые номера в программе PageMaker, проведение расчетов на прочность. Оформление отчетной документации по результатам технологических испытаний.</li>
+                                <li><strong>2014 - to present</strong><br>The branch of the federal state enterprise "Russian State Circus Company", "Moscow Art Production Complex"<br>Position: Engineer on technical passports<br>Responsibilities: Making technical passports for circus apparatus, wares, circus show in the PageMaker program, making settlements for strength. Making reporting documents on the results of technological tests.</li>
                             </ul>
                         </td>
                     </tr>
@@ -147,13 +150,14 @@
                             <ul class="list-none">
                                 <li>I have such personal qualities  such as responsibility, attentiveness, sense of duty, ability to learn fast and focus on results.</li>
                                 <li>I don't have any bad habits.</li>
-                                <li>I do sports, .</li>
+                                <li>I do sports and read  imaginative and professional literature.</li>
                             </ul>
                         </td>
                     </tr>
                 </table>
                
         </div>
+        <p class="anchor"><a href="#top">Вернуться к началу</a></p>
         <div class="before"></div>
     </div> 
     <footer>
