добавила ссылки на страницу "резюме" и "навыки"

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </div>
             
             <nav>
-                <a href="?url=index">Главная</a>
-                <a href="?url=1erer">Резюме</a>
+                <a href="index.html">Главная</a>
+                <a href="resume.html">Резюме</a>
                 <a href="?url=dop">Проекты</a>
                 <a href="?url=cont">Контакты</a>
             </nav>
@@ -37,19 +37,19 @@
                 <br>
                 <div class="menu">
                     <div class="resume">
-                        <a href="?url=1erer" target="_blank">
+                        <a href="resume.html">
                             <button> <img src="pict/button.png" alt="Резюме" title="Резюме"></button>
                         </a>
                     </div>
 
                     <div class="skills">
-                        <a href="?url=dop" target="_blank">
+                        <a href="resume.html#skills">
                             <button><img src="pict/button (2).png" alt="Навыки"></button>
                         </a>
                     </div>
 
                     <div class="projects">
-                        <a href="?url=cont" target="_blank">
+                        <a href="?url=cont">
                             <button><img src="pict/button (1).png" alt="Проекты"></button>
                         </a>
                     </div>
