добавили строку с навыками и якорь для навыков

--- a/resume.html
+++ b/resume.html
@@ -15,8 +15,8 @@
                 <img src="pict/cite.png" width="70" height="70" alt="Cite">
             </div>
             <nav>
-                <a href="?url=index">Главная</a>
-                <a href="?url=1erer">Резюме</a>
+                <a href="index.html">Главная</a>
+                <a href="resume.html">Резюме</a>
                 <a href="?url=dop">Проекты</a>
                 <a href="?url=cont">Контакты</a>
             </nav> 
@@ -25,7 +25,8 @@
                 <p class="anchor">
                     <a href="#Резюме">Резюме</a>
                     <a href="#Resume">Resume</a>
-                    <a href="?url=cont">Навыки</a>
+                    <a href="resume.html#skills">Навыки</a>
+                    <a href="resume.html#skills1">Skills</a>
                 </p>
                 <table>
                     <caption class="text">Резюме <a id="Резюме"></a></caption>
@@ -89,6 +90,18 @@
                             </ul>
                         </td>
                     </tr>
+                    <tr>
+                        <th id="skills">Навыки</th>
+                        <td>
+                            <ul>
+                                <li>Уверенный пользователь ПК и Windows (свободно работаю с MS  Office, MS Power Point, Internet);</li>
+                                <li>Имею навыки работы с  Adobe PhotoShop, Adobe Assets на уровне резки макетов;</li>
+                                <li>Хорошее знание HTML/HTML5, CSS/CSS3, начальный уровень Javascript;</li>
+                                <li>Имею навыки работы с SmartGit;</li>
+                                <li>Понимание кроссбраузерности и валидности;</li>
+                            </ul>
+                        </td>
+                    </tr>
                 </table>
                 
                 <table>
@@ -117,12 +130,12 @@
                         <th>Education</th>
                         <td>
                             <ul>
-                                <li><strong>2009-2014</strong><br>Omsk state technical university. Specialty - the standardization and certification engineer</li>
-                                <li><strong>2016</strong><br>GeekBrains, courses - "Programming essentials"</li>
-                                <li><strong>2016</strong><br>GeekBrains, courses - "Object-oriented programming"</li>
-                                <li><strong>2016</strong><br>GeekBrains, courses - "Git. Fast start"</li>
-                                <li><strong>2016</strong><br>GeekBrains, courses - "Web-design bases"</li>
-                                <li><strong>2016</strong><br>GeekBrains, courses - "HTML5 &amp; CSS3"</li>
+                                <li><strong>2009-2014</strong><br>Omsk state technical university. Specialty - the standardization and certification engineer;</li>
+                                <li><strong>2016</strong><br>GeekBrains, courses - "Programming essentials";</li>
+                                <li><strong>2016</strong><br>GeekBrains, courses - "Object-oriented programming";</li>
+                                <li><strong>2016</strong><br>GeekBrains, courses - "Git. Fast start";</li>
+                                <li><strong>2016</strong><br>GeekBrains, courses - "Web-design bases";</li>
+                                <li><strong>2016</strong><br>GeekBrains, courses - "HTML5 &amp; CSS3".</li>
                             </ul>
                         </td>
                     </tr>
@@ -130,7 +143,7 @@
                         <th>Work Experience</th>
                         <td>
                             <ul>
-                                <li><strong>2014 - to present</strong><br>The branch of the federal state enterprise "Russian State Circus Company", "Moscow Art Production Complex"<br>Position: Engineer on technical passports<br>Responsibilities: Making technical passports for circus apparatus, wares, circus show in the PageMaker program, making settlements for strength. Making reporting documents on the results of technological tests.</li>
+                                <li><strong>2014 - to present</strong><br>The branch of the federal state enterprise "Russian State Circus Company" "Moscow Art Production Complex"<br>Position: Engineer on technical passports<br>Responsibilities: Making technical passports for circus apparatus, wares, circus show in the PageMaker program, making settlements for strength. Making reporting documents on the results of technological tests.</li>
                             </ul>
                         </td>
                     </tr>
@@ -138,19 +151,30 @@
                         <th>Languages</th>
                         <td>
                             <ul>
-                                <li><strong>Russian</strong> - Native</li>
-                                <li><strong>English</strong> - Elementary</li>
+                                <li><strong>Russian</strong> - Native;</li>
+                                <li><strong>English</strong> - Elementary.</li>
                             </ul>
                         </td>
                     </tr>
                     <tr>
                         <th>Extracurricular activities</th>
                         <td>
-                        
                             <ul class="list-none">
                                 <li>I have such personal qualities  such as responsibility, attentiveness, sense of duty, ability to learn fast and focus on results.</li>
                                 <li>I don't have any bad habits.</li>
                                 <li>I do sports and read  imaginative and professional literature.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th id="skills1">Skills</th>
+                        <td>
+                            <ul>
+                                <li>The advanced PC user and Windows (freely I work with MS Office, MS Power Point, Internet);</li>
+                                <li>I have skills of work with Adobe PhotoShop, Adobe Assets at the level of the cutting layouts;</li>
+                                <li>Good knowledge of HTML / HTML5, CSS / CSS3, beginner level of Javascript;</li>
+                                <li>I have skills of work with SmartGit;</li>
+                                <li>Understanding оf cross-browser and validity;</li>
                             </ul>
                         </td>
                     </tr>
