добавила ссылки на сертификаты

--- a/resume.html
+++ b/resume.html
@@ -36,8 +36,8 @@
                             <ul class="list-none">
                                 <li>Рудюк Алена</li>
                                 <li>Дата рождения: 20 августа 1991 г.</li>
-                                <li>Мобильный телефон: +7(968)409-80-41</li>
-                                <li>Viber: +7(977)314-96-37</li>
+                                <li>Мобильный телефон: +7 (968) 409-80-41</li>
+                                <li>Viber: +7 (977) 314-96-37</li>
                                 <li>Email: alenar91@mail.ru</li>
                             </ul>
                         </td>
@@ -54,12 +54,12 @@
                         <th>Образование</th>
                         <td>
                             <ul>
-                                <li><strong>2009-2014</strong><br>Омский государственный технический университет (ОмГТУ). Специальность - инженер по стандартизации и сертификации</li>
-                                <li><strong>2016</strong><br>GeekBrains, курсы- "Основы программирования"</li>
-                                <li><strong>2016</strong><br>GeekBrains, курсы- "Объектно-ориентированное программирование"</li>
-                                <li><strong>2016</strong><br>GeekBrains, курсы- "Git. Быстрый старт"</li>
-                                <li><strong>2016</strong><br>GeekBrains, курсы- "Основы Веб-дизайна"</li>
-                                <li><strong>2016</strong><br>GeekBrains, курсы- "HTML5 и CSS3"</li>
+                                <li><strong>2009-2014</strong><br>Омский государственный технический университет (ОмГТУ). Специальность - инженер по стандартизации и сертификации;</li>
+                                <li><strong>2016</strong><br>GeekBrains, курс - <a href="https://geekbrains.ru/certificates/88554" target="_blank">"Основы программирования. Онлайн-курс"</a></li>
+                                <li><strong>2016</strong><br>GeekBrains, курсы - <a href="https://geekbrains.ru/certificates/90628" target="_blank">"Объектно-ориентированное программирование"</a></li>
+                                <li><strong>2016</strong><br>GeekBrains, курс - <a href="https://geekbrains.ru/certificates/93159" target="_blank">"Git. Быстрый старт.Инструмент командной разработки"</a></li>
+                                <li><strong>2016</strong><br>GeekBrains, курс - <a href="https://geekbrains.ru/certificates/100248" target="_blank">"Основы Веб-дизайна. Онлайн-курс"</a></li>
+                                <li><strong>2016</strong><br>GeekBrains, курс - <a href="https://geekbrains.ru/certificates/113494" target="_blank">"HTML5 и CSS3. Современные средства Web-разработки"</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -111,9 +111,9 @@
                         <td>
                             <ul class="list-none">
                                 <li>Ryduyk Alena</li>
-                                <li>Date of birth: 20th August, 1991.</li>
-                                <li>Mobile phone: +7(968)409-80-41</li>
-                                <li>Viber: +7(977)314-96-37</li>
+                                <li>Date of birth: August 20, 1991.</li>
+                                <li>Mobile phone: +7 (968) 409-80-41</li>
+                                <li>Viber: +7 (977) 314-96-37</li>
                                 <li>Email: alenar91@mail.ru</li>
                             </ul>
                         </td>
@@ -131,11 +131,11 @@
                         <td>
                             <ul>
                                 <li><strong>2009-2014</strong><br>Omsk state technical university. Specialty - the standardization and certification engineer;</li>
-                                <li><strong>2016</strong><br>GeekBrains, courses - "Programming essentials";</li>
-                                <li><strong>2016</strong><br>GeekBrains, courses - "Object-oriented programming";</li>
-                                <li><strong>2016</strong><br>GeekBrains, courses - "Git. Fast start";</li>
-                                <li><strong>2016</strong><br>GeekBrains, courses - "Web-design bases";</li>
-                                <li><strong>2016</strong><br>GeekBrains, courses - "HTML5 &amp; CSS3".</li>
+                                <li><strong>2016</strong><br>GeekBrains, course - <a href="https://geekbrains.ru/certificates/88554.en" target="_blank">Introduction to Programming. Online Course</a>;</li>
+                                <li><strong>2016</strong><br>GeekBrains, course - <a href="https://geekbrains.ru/certificates/90628.en" target="_blank">Object Oriented Programming</a>;</li>
+                                <li><strong>2016</strong><br>GeekBrains, course - <a href="https://geekbrains.ru/certificates/93159.en" target="_blank">Git. Easy Start. Version Control System</a>;</li>
+                                <li><strong>2016</strong><br>GeekBrains, course - <a href="https://geekbrains.ru/certificates/100248.en" target="_blank"> Introduction to Web Design. Online Course</a>;</li>
+                                <li><strong>2016</strong><br>GeekBrains, course - <a href="https://geekbrains.ru/certificates/113494.en" target="_blank">"HTML5 and CSS3. Advanced Web Development Tools"</a> .</li>
                             </ul>
                         </td>
                     </tr>
