исправила дополнительную информацию и навыки

--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
                             <ul>
                                 <li><strong>2009-2014</strong><br>Омский государственный технический университет (ОмГТУ). Специальность - инженер по стандартизации и сертификации;</li>
                                 <li><strong>2016</strong><br>GeekBrains, курс - <a href="https://geekbrains.ru/certificates/88554" target="_blank">"Основы программирования. Онлайн-курс"</a></li>
-                                <li><strong>2016</strong><br>GeekBrains, курсы - <a href="https://geekbrains.ru/certificates/90628" target="_blank">"Объектно-ориентированное программирование"</a></li>
+                                <li><strong>2016</strong><br>GeekBrains, курс - <a href="https://geekbrains.ru/certificates/90628" target="_blank">"Объектно-ориентированное программирование"</a></li>
                                 <li><strong>2016</strong><br>GeekBrains, курс - <a href="https://geekbrains.ru/certificates/93159" target="_blank">"Git. Быстрый старт.Инструмент командной разработки"</a></li>
                                 <li><strong>2016</strong><br>GeekBrains, курс - <a href="https://geekbrains.ru/certificates/100248" target="_blank">"Основы Веб-дизайна. Онлайн-курс"</a></li>
                                 <li><strong>2016</strong><br>GeekBrains, курс - <a href="https://geekbrains.ru/certificates/113494" target="_blank">"HTML5 и CSS3. Современные средства Web-разработки"</a></li>
@@ -75,18 +75,23 @@
                         <th>Иностранные языки</th>
                         <td>
                             <ul>
-                                <li><strong>Русский</strong> - родной</li>
-                                <li><strong>Английский</strong> - базовый уровень</li>
+                                <li><strong>Русский</strong> - родной;</li>
+                                <li><strong>Английский</strong> - базовый уровень.</li>
                             </ul>
                         </td>
                     </tr>
                     <tr>
                         <th>Дополнительная информация</th>
                         <td>
-                            <ul class="list-none">
-                                <li>Обладаю такими личными качествами, как ответственность, внимательность, исполнительность, быстрая обучаемость и нацеленность на результат.</li>
-                                <li>Отсутствуют какие-либо вредные привычки.</li>
-                                <li>Занимаюсь спортом, чтением художественной и профессиональной литературы.</li>
+                            <ul>
+                                <li>Не замужем, детей нет;</li>
+                                <li>Отсутствуют какие-либо вредные привычки;</li>
+                                <li>В короткие сроки обучаюсь новым знаниям;</li>
+                                <li>Внимательно подхожу к процессу выполнения работы, нацелена на получение результата;</li>
+                                <li>Стремлюсь быть успешной во всех начинаниях;</li>
+                                <li>Высокая грамотность устной и письменной речи;</li> 
+                                <li>Повышаю уровень знания английского языка;</li>
+                                <li>Веду активный образ жизни, занимаюсь спортом.</li>
                             </ul>
                         </td>
                     </tr>
@@ -94,11 +99,15 @@
                         <th id="skills">Навыки</th>
                         <td>
                             <ul>
-                                <li>Уверенный пользователь ПК и Windows (свободно работаю с MS  Office, MS Power Point, Internet);</li>
+                                <li>Уверенный пользователь ПК и Windows (свободно работаю в MS  Office, MS Power Point, Internet и др.);</li>
                                 <li>Имею навыки работы с  Adobe PhotoShop, Adobe Assets на уровне резки макетов;</li>
                                 <li>Хорошее знание HTML/HTML5, CSS/CSS3, начальный уровень Javascript;</li>
+                                <li>Понимание кроссбраузерности и валидности.</li>
+                                <li>Успешно прошла тестирование по <a href="https://geekbrains.ru/certificates/85513" target="_blank">основам программирования (начальный уровень)</a>;</li>
+                                <li>Успешно прошла тестирование по <a href="https://geekbrains.ru/certificates/85516" target="_blank">HTML&CSS (начальный уровень)</a>;</li>
+                                <li>Успешно прошла тестирование по <a href="https://geekbrains.ru/certificates/113640" target="_blank">веб-дизайну (начальный уровень)</a>;</li>
                                 <li>Имею навыки работы с SmartGit;</li>
-                                <li>Понимание кроссбраузерности и валидности;</li>
+                                
                             </ul>
                         </td>
                     </tr>
@@ -135,7 +144,7 @@
                                 <li><strong>2016</strong><br>GeekBrains, course - <a href="https://geekbrains.ru/certificates/90628.en" target="_blank">Object Oriented Programming</a>;</li>
                                 <li><strong>2016</strong><br>GeekBrains, course - <a href="https://geekbrains.ru/certificates/93159.en" target="_blank">Git. Easy Start. Version Control System</a>;</li>
                                 <li><strong>2016</strong><br>GeekBrains, course - <a href="https://geekbrains.ru/certificates/100248.en" target="_blank"> Introduction to Web Design. Online Course</a>;</li>
-                                <li><strong>2016</strong><br>GeekBrains, course - <a href="https://geekbrains.ru/certificates/113494.en" target="_blank">"HTML5 and CSS3. Advanced Web Development Tools"</a> .</li>
+                                <li><strong>2016</strong><br>GeekBrains, course - <a href="https://geekbrains.ru/certificates/113494.en" target="_blank">"HTML5 and CSS3. Advanced Web Development Tools"</a>.</li>
                             </ul>
                         </td>
                     </tr>
@@ -159,10 +168,15 @@
                     <tr>
                         <th>Extracurricular activities</th>
                         <td>
-                            <ul class="list-none">
-                                <li>I have such personal qualities  such as responsibility, attentiveness, sense of duty, ability to learn fast and focus on results.</li>
-                                <li>I don't have any bad habits.</li>
-                                <li>I do sports and read  imaginative and professional literature.</li>
+                            <ul>
+                                <li>Not married, have no children;</li>
+                                <li>Not have any bad habits;</li>
+                                <li>In a short time learn new knowledge;</li>
+                                <li>I attentively approach the process of implementation the work, I focused on getting results;</li>
+                                <li>I aspire to successes in all undertakings;</li>
+                                <li>I have high literacy of an oral and written language;</li> 
+                                <li>I increase the level of knowledge of English;</li>
+                                <li>I conduct an active way of life, do sports.</li>
                             </ul>
                         </td>
                     </tr>
@@ -170,11 +184,15 @@
                         <th id="skills1">Skills</th>
                         <td>
                             <ul>
-                                <li>The advanced PC user and Windows (freely I work with MS Office, MS Power Point, Internet);</li>
+                                <li>The advanced PC user and Windows (I operate freely in MS Office, MS Power Point, Internet, etc.);</li>
                                 <li>I have skills of work with Adobe PhotoShop, Adobe Assets at the level of the cutting layouts;</li>
                                 <li>Good knowledge of HTML / HTML5, CSS / CSS3, beginner level of Javascript;</li>
-                                <li>I have skills of work with SmartGit;</li>
                                 <li>Understanding оf cross-browser and validity;</li>
+                                <li>Successfully passed the test <a href="https://geekbrains.ru/certificates/85513.en" target="_blank"> Introduction To Programming (beginner)</a>;</li>
+                                <li>Successfully passed the test <a href="https://geekbrains.ru/certificates/85516.en" target="_blank">HTML&CSS (beginner)</a>;</li>
+                                <li>Successfully passed the test <a href="https://geekbrains.ru/certificates/113640.en" target="_blank"> Web-design (beginner)</a>;</li>
+                                <li>I have skills of work with SmartGit;</li>
+                                
                             </ul>
                         </td>
                     </tr>
