изменила уровень знания английского

--- a/resume.html
+++ b/resume.html
@@ -161,7 +161,7 @@
                         <td>
                             <ul>
                                 <li><strong>Russian</strong> - Native;</li>
-                                <li><strong>English</strong> - Elementary.</li>
+                                <li><strong>English</strong> - Pre-Intermediate.</li>
                             </ul>
                         </td>
                     </tr>
